--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-validator": "^7.0.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.4.4",
     "mongoose": "^8.3.3",
     "morgan": "~1.9.1",
     "passport": "^0.7.0",
